{
    "version": 1,
    "name": "CameraInputs",
    "maps": [
        {
            "name": "CameraMovements",
            "id": "c0d6a4ae-cc73-46c9-a262-fd2852b433c9",
            "actions": [
                {
                    "name": "Movements",
                    "type": "Value",
                    "id": "3217a8e8-7412-4e89-bc33-fc0fac442dcb",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Speeding",
                    "type": "Button",
                    "id": "af5bf533-79bf-4f80-a5a1-98e6c72c8c11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "Value",
                    "id": "3060637b-5d27-4fef-a515-1d9041f8c332",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "7119e3ca-096c-4b61-b883-5e88ab3bb7e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "fbc667b7-d07b-44ae-a487-ff47b5a3de48",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4931dc01-d81c-47e9-8e73-335ebde55922",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee8f6ea3-faf8-4e9c-8666-4c8d365acc62",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c891a415-b14e-4311-8f8a-281647c05e43",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aaa10bcd-8952-4cf9-8674-e5cc1640f9aa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "2b0b47d0-f01e-48cd-a805-5405da6235e7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "e5a03611-e85d-4501-8d7e-dee4116b3d58",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d7646d0d-08cc-4c98-86ad-86901935c50d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speeding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5190dc9-4a98-4ace-9bd9-1852ed2d9568",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1979900-e184-42b8-888d-b382c451a9e3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMenuControls",
            "id": "6a3a1ab4-92ba-49fc-89aa-12ce4426985e",
            "actions": [
                {
                    "name": "OpenCloseMenu",
                    "type": "Button",
                    "id": "ab5d9d73-b9fe-4696-bc09-389302a1d9d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4af93e44-2db1-4513-8b17-b7bc23752e93",
                    "path": "<Keyboard>/#(M)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}